--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "adm-zip": "^0.5.16",
         "cookies-next": "^4.3.0",
         "googleapis": "^144.0.0",
         "jsonwebtoken": "^9.0.2",
         "next": "14.2.14",
         "react": "^18",
         "react-dom": "^18",
-        "uuid": "^10.0.0"
+        "uuid": "^11.0.2"
     },
     "devDependencies": {
+        "@types/adm-zip": "^0.5.6",
+        "@types/formidable": "^3.4.5",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^20",
         "@types/react": "^18",
@@ -25,6 +28,7 @@
         "@types/uuid": "^10.0.0",
         "eslint": "^8",
         "eslint-config-next": "14.2.14",
+        "multiparty": "^4.2.3",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
